<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.AboutUWIActivity">

    <TextView
        android:id="@+id/about_uwi_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/string_uwi_summary"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/uwi_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_uwi_summary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_visit_uwi_link"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/string_uwi_about_link"
            android:textColor="@color/black"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_for_more_info"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_research_day_address"
                android:textColor="@color/colorSecondaryText"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_uwi_name"
                android:textColor="@color/colorSecondaryText"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_mona_jm"
                android:textColor="@color/colorSecondaryText"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/string_research_day_site"
                android:textColor="@color/colorSecondaryText"
                android:textIsSelectable="true" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/string_research_day_tele"
                android:textColor="@color/colorSecondaryText"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/string_research_day_email"
                android:textColor="@color/colorSecondaryText"
                android:textIsSelectable="true" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_country_flags"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</RelativeLayout>