<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/event_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="STime"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="-"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/event_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ETime"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />


            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/bookmark_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:src="@drawable/ic_bookmark_border_black_24dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_venue_heading"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/event_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textSize="15sp" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/string_category_heading"-->
            <!--android:textSize="15sp"-->
            <!--android:textStyle="bold" />-->

            <!--<TextView-->
            <!--android:id="@+id/event_category"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Category"-->
            <!--android:textSize="15sp" />-->
            <!--</LinearLayout>-->

            <!--<Space-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.5" />-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_type_heading"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/event_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="vertical">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/string_dept_office_heading"-->
                    <!--android:textSize="15sp"-->
                    <!--android:textStyle="bold" />-->

                <!--<TextView-->
                    <!--android:id="@+id/event_dept"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="15sp" />-->
            <!--</LinearLayout>-->

            <!--<Space-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="0.5" />-->

            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="vertical"-->
                <!--android:visibility="invisible">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/string_faculty_heading"-->
                    <!--android:textSize="15sp"-->
                    <!--android:textStyle="bold" />-->

                <!--<TextView-->
                    <!--android:id="@+id/event_faculty"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="15sp" />-->
            <!--</LinearLayout>-->
        <!--</LinearLayout>-->

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/string_details_heading"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/event_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>